tests/specs/jsr/import_jsr_via_https/main.ts
import deps from "http://127.0.0.1:4250/@denotest/deps/1.0.0/mod.ts";

console.log(deps.version);
